fix overflow for best-product

--- a/source/less/components/best-product.less
+++ b/source/less/components/best-product.less
@@ -34,7 +34,7 @@
   padding-bottom: 20px;
 
   @media @tablet {
-    height: 597px;
+    min-height: 597px;
     padding-top: 47px;
     padding-bottom: 40px;
   }
@@ -184,17 +184,20 @@
 }
 
 .best-product__image-wrapper {
-  background-color: @placeholder-img-color;
 
   @media @tablet {
+    background-color: @placeholder-img-color;
     order: 1;
-    margin-top: auto;
-    margin-left: auto;
-    margin-right: unset;
+    margin: 0;
+    position: absolute;
+    right: 53px;
+    bottom: 40px;
   }
 
   @media @desktop {
     margin-top: auto;
+    right: 0;
+    bottom: 78px;
   }
 }
 
